Encapsulate task collection in TaskList
Move mutable list ownership, one-based task access, add/delete/restore operations, and immutable persistence snapshots out of Shan. Preserve command-specific validation messages and failed-save rollback behavior while preparing the chatbot for instance-based composition.